update web files

--- a/find-my-influencer/src/index.css
+++ b/find-my-influencer/src/index.css
@@ -425,6 +425,17 @@ h6 {
   flex-wrap: wrap;
 }
 
+.card-bio {
+  font-size: 0.9rem;
+  color: var(--text-main);
+  margin-bottom: 1rem;
+  line-height: 1.5;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
 .modal-actions {
   margin-top: auto;
   padding-top: 2rem;
